--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -4,5 +4,16 @@
        </div>
         <% end %>
 
-<h1>home page </h1>
+<h1>Movie Home Page</h1>
+
+<% if @movies.length > 0 %>
+<ul class="movies-list">
+<% @movies.each do |film| %>
+    <li class="movie-item"> <a href="/movies/<%= film.id %>"><%= film.title %></a> <a class="btn btn-primary btn-sm" href="/movies/<%=film.id%>/favorite"> <%= current_user.like_or_unlike(film)%> </a> </li>
+    <br>
+    <% end %>
+    </ul>
+    <% else %>
+    <p>there are currently no movies.</p>
+    <% end %>
 
