--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,1 +1,26 @@
-<h1>Insert the form to create a new instance of your model.</h1>
+
+
+<h1>Create your new movie below</h1>
+
+<form method="POST" action="/movies">
+    <div class= "form-group">
+        <label for="title">Title:</label>
+        <input type="text" name="movie[title]" id="title" class="form-control"  required>
+        </div>
+    <div class= "form-group">
+        <label for="genre">Genre:</label>
+        <input type="text" name="movie[genre]" id="genre" class="form-control"  required><br>
+        </div>
+    <div class= "form-group">
+        <label for="length">Length:</label>
+        <input type="decimal" name="movie[length]" id="length" class="form-control"  required>
+        </div>
+        <div class= "form-group">
+        <label for="director">Director:</label>
+        <input type="text" name="movie[director]" id="director" class="form-control"  required>
+        </div>
+    
+    <input type="submit" value="Create">
+
+
+</form>
