--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,11 @@
-<h1>This is the show page for an individual instance of your model.</h1>
+<h1>Profile</h1>
+<% if @movies.length > 0 %>
+<ul class="movies-list">
+<% @movies.each do |film| %>
+    <li class="movie-item"> <a href="/movies/<%= film.id %>"><%= film.title %></a> <a class="btn btn-primary btn-sm" href="/movies/<%=film.id%>/favorite"> <%= current_user.like_or_unlike(film)%> </a> </li>
+    <br>
+    <% end %>
+    </ul>
+    <% else %>
+    <p>there are currently no movies.</p>
+    <% end %>
