--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,7 +13,7 @@
 
   /* --- Welcome Page Styles --- */
   body {
-    background-color: lightblue;
+    background-color: rgb(8, 0, 37);
     color: #333;
     font-family: Sans-Serif;
     line-height: 18px;
@@ -81,6 +81,10 @@
     margin-top: 20px;
     padding-top: 20px;
   }
+  #delete-form { 
+    display: inline;
+
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -111,5 +115,9 @@
   h2 {
     font-size: 18px;
     line-height: 24px;
+  }
+  .bg-light {
+    background: grey;
+
   }
 }
