--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,58 +15,57 @@
   </head>
   <body>
     <div class="wrapper">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <% if !logged_in? %>
-      <li class="nav-item">
-        <a class="nav-link" href="/login">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/signup">Signup</a>
-      </li>
-      <% else %>
-      <li class="nav-item">
-        <a class="nav-link" href="/logout">Logout</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/users/:id">Profile</a>
-      </li>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/movies">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <% if !logged_in? %>
+              <li class="nav-item">
+                <a class="nav-link" href="/login">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/signup">Signup</a>
+              </li>
+            <% else %>
+              <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/<%=current_user.id%>">Profile</a>
+              </li>
 
-      <% end %>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Resources
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/movies">Movies</a>
-          <a class="dropdown-item" href="#">Favorites</a>
-          <a class="dropdown-item" href="/movies/new">Create New Movie</a>
-         
-        </div>
-      </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Resources
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="/movies">Movies</a>
+                  <a class="dropdown-item" href="/movies/new">Create New Movie</a>
+                 
+                </div>
+              </li>
+            <% end %>
       
-    </ul>
+          </ul>
     
-  </div>
-</nav>
+        </div>
+      </nav>
     
-<% if flash[:error] %>
- <div class="error flash fatal">
-         <h4 class ="error"><%= flash[:error] %></h4>
-       </div>
-<% elsif  flash[:success] %>
-  <div class="success flash">
-  <h4 class ="success"><%= flash[:success] %></h4>
-</div>
-        <% end %>
+      <% if flash[:error] %>
+        <div class="error flash fatal">
+          <h4 class ="error"><%= flash[:error] %></h4>
+        </div>
+      <% elsif  flash[:success] %>
+        <div class="success flash">
+          <h4 class ="success"><%= flash[:success] %></h4>
+        </div>
+      <% end %>
 
         <%= yield %>
 
