--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -18,5 +18,9 @@
     <label for="director">Director:</label>
      <input id="director" type="text" name="movie[director]" value="<%=@movie.director%>">
     </div>
+    <div class= "form-group">
+        <label for="plot">Plot:</label>
+        <input type="text" name="movie[plot]" id="plot"  value="<%=@movie.plot%>" >
+        </div>
     <input type="submit" value="update">
 </form>
