--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -19,6 +19,10 @@
         <label for="director">Director:</label>
         <input type="text" name="movie[director]" id="director" class="form-control"  required>
         </div>
+        <div class= "form-group">
+        <label for="plot">Plot:</label>
+        <input type="text" name="movie[plot]" id="plot" class="form-control"  required>
+        </div>
     
     <input type="submit" value="Create">
 
