--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -50,6 +50,12 @@
                  
                 </div>
               </li>
+              <li class="nav-item">
+              <form action='/movies' method='get'>
+              <input type="text" name="search" id="search" >
+              <input type="submit" value="search">
+              </form>
+              </li>
             <% end %>
       
           </ul>
