--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -10,7 +10,7 @@
     <% end %>
     </ul>
     <% else %>
-    <p>there are currently no movies.</p>
+    <p>there are currently no movies!</p>
     <% end %>
    
 
