--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -24,7 +24,7 @@
         <input type="text" name="movie[plot]" id="plot" class="form-control"  required>
         </div>
     
-    <input type="submit" value="Create">
+    <input type="submit" id="create-orange-button" value="Create">
 
 
 </form>
