--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -36,7 +36,7 @@
   }
 
   h2 {
-    border-bottom: 2px solid #ccc;
+    border-bottom: 2px solid rgb(245, 244, 244);
     font-size: 24px;
     line-height: 36px;
     margin-bottom: 16px;
@@ -46,6 +46,7 @@
     font-size: 18px;
     line-height: 36px;
   }
+
 
   p {
     margin-bottom: 18px;
@@ -117,7 +118,7 @@
     line-height: 24px;
   }
   .bg-light {
-    background: grey;
+    background: rgb(233, 231, 231);
 
   }
 }
