--- a/public/stylesheets/my_css_style.css
+++ b/public/stylesheets/my_css_style.css
@@ -19,18 +19,21 @@
     background-color: rgb(80, 72, 1);
     /* background-color: none; */
     background-blend-mode:overlay;
-    color: #333;
+    color: #000000;
     font-family: Sans-Serif;
     line-height: 18px;
   }
 
   .wrapper {
+    /* position: relative; */
+    
+    background-blend-mode:overlay;
    
-    background: rgb(0, 0, 0);
+    background: rgba(2,255,255,.1);
    
-    -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
-    -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
-    box-shadow: 0 0 10px rgba(0,0,0,.3);
+    /* -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3); */
+    box-shadow: 0 0 10px rgba(0,0,0,.8);
     margin: 16px auto;
     max-width: 960px;
     padding: 2.25%; /* 18px / 800px */
@@ -38,7 +41,7 @@
   }
 
   h1 {
-      color: rgb(218, 218, 218);
+      color: rgb(255, 255, 255);
     font-size: 36px;
     line-height: 54px;
   }
@@ -58,3 +61,29 @@
     text-decoration:whitesmoke;
 
   }
+
+  
+  label {
+    color: #ff5d00;
+  
+ }
+
+ #create-orange-button {
+
+    /* background: #ffffff; */
+    background: #ff5d00;;
+
+    font-size: 36px;
+    font
+    width: %;
+     padding: 2.25%;
+     
+  }
+
+  /* .form-container {
+      position: relative;
+      max-width: 600px;
+      padding: 50px;
+      background: rgba(255,255,255.2);
+
+  } */
