--- a/public/stylesheets/my_css_style.css
+++ b/public/stylesheets/my_css_style.css
@@ -71,7 +71,7 @@
  #create-orange-button {
 
     /* background: #ffffff; */
-    background: #ff5d00;;
+    background: #d69d01;;
 
     font-size: 36px;
     font
